<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="100dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="8">

        <EditText
            android:id="@+id/etIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/hint_server_address" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_user" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_pass" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/action_login"
                android:layout_gravity="center" />

        </TableLayout>

        <CheckBox
            android:id="@+id/cbPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_login_info" />

        <TextView
            android:id="@+id/tvStt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="1">

    </LinearLayout>

</LinearLayout>